--- a/style.css
+++ b/style.css
@@ -23,13 +23,13 @@
 
 /* Customizing the button */
 .swal-button {
-  background-color:#053314 !important; /* Change button background color */
+  background-color: #053314 !important; /* Change button background color */
   color: #ffffff !important; /* Change button text color */
 }
 
 /* Customizing the button on hover */
 .swal-button:hover {
-  background-color:#0e4b16 !important; /* Change button hover background color */
+  background-color: #0e4b16 !important; /* Change button hover background color */
 }
 :root {
   --bg-color: #053314;
@@ -52,7 +52,6 @@ body::-webkit-scrollbar {
 }
 body {
   scrollbar-width: none;
-
 }
 section {
   min-height: 100vh;
@@ -73,7 +72,7 @@ section {
 .header.sticky {
   border-bottom: 0.1rem solid rgb(252, 187, 223);
 } */
-.header img{
+.header img {
   height: 6rem;
   margin-right: 2rem;
 }
@@ -87,44 +86,39 @@ section {
 }
 .navbar a {
   font-size: 1.5vmax;
-
- }
- section
- {
-   min-height: 100vh;
-   padding: 10rem 9% 2rem;
- }
- .header
- {
+}
+section {
+  min-height: 100vh;
+  padding: 10rem 9% 2rem;
+}
+.header {
   position: fixed;
   opacity: 0.8;
-   top: 0;
-   left: 0;
-   width:100%;
-   padding:2rem 9%;
-   background-color: var(--bg-color);
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   z-index: 10000;
-   transition: all 0.8s;
- }
- .header.sticky
- {
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 2rem 9%;
+  background-color: var(--bg-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 10000;
+  transition: all 0.8s;
+}
+.header.sticky {
   opacity: 0.9;
   padding: 2rem 5%;
   background-color: rgb(4, 125, 18);
-  box-shadow: 0 0 1.5px 2px rgb(14, 14, 14,0.8);
- }
+  box-shadow: 0 0 1.5px 2px rgb(14, 14, 14, 0.8);
+}
 
- .logo
- {
-    font-size: 2.5rem;
-    color: var(--txt-color);
-    font-weight: 600;
-    cursor: default;
- }
- .navbar a {
+.logo {
+  font-size: 2.5rem;
+  color: var(--txt-color);
+  font-weight: 600;
+  cursor: default;
+}
+.navbar a {
   /* position: relative; */
   font-size: 2rem;
   /* left: 118px; */
@@ -139,12 +133,11 @@ section {
   color: var(--main-color);
 }
 
-
 .navbar a.active,
 .navbar a.active:hover {
   color: var(--main-color);
 }
-  .navbar.active {
+.navbar.active {
   display: block;
 }
 .logoImg {
@@ -189,19 +182,18 @@ section {
 
 /* ---------SLIDER CSS------------------------ */
 
-
 .home {
   width: 100%;
   /* border: 2px solid blue;  */
   padding: 0;
   margin: 0;
   position: relative;
-} 
+}
 .slider {
   margin: 0;
   min-width: 100%;
   /* border: 2px solid red; */
-  min-height: 100vh;  
+  min-height: 100vh;
 }
 
 .slide_viewer {
@@ -210,7 +202,7 @@ section {
   position: relative;
 }
 
-.slide_group { 
+.slide_group {
   height: 100%;
   position: relative;
   width: 500%; /* Updated width to accommodate all slides */
@@ -224,74 +216,64 @@ section {
   background-size: cover;
 }
 
-.home-content{
+.home-content {
   z-index: 1;
   position: absolute;
   top: 30%;
-  left: 25.0%;
+  left: 25%;
   background: rgba(0, 42, 0, 0.441);
   border-radius: 50px;
-  padding: 3vmax 3vmax 3vmax 3vmax; 
+  padding: 3vmax 3vmax 3vmax 3vmax;
   filter: blur(0.8px);
   width: 55%;
   height: 25vmax;
   font-size: 4vmax;
 }
 
-
-
-
 .home-content h3 {
   font-size: 4.2rem;
   font-weight: 700;
 }
 .home-content h3:nth-of-type(2) {
-
-  margin-right:5px; /* Adjust margin as needed */
+  margin-right: 5px; /* Adjust margin as needed */
 }
 
- #menu-icon
- {
-    font-size: 3.6rem;
-    color:var(--txt-color);
-    display:none;
- }
- 
- /* .home
+#menu-icon {
+  font-size: 3.6rem;
+  color: var(--txt-color);
+  display: none;
+}
+
+/* .home
  {
    display: grid;
    justify-content: center;
    align-items: center;
    grid-template-columns: 600px 300px;
  } */
- /* .home-img img
+/* .home-img img
  {
   width: 20vw;
   animation:floatImage 4s ease-in-out infinite;
  } */
 
- @keyframes floatImage{
-  0%
-  {
-    transform:translateY(0);
+@keyframes floatImage {
+  0% {
+    transform: translateY(0);
   }
-  50%
-  {
-    transform:translateY(-2.4rem);
+  50% {
+    transform: translateY(-2.4rem);
   }
-  100%
-  {
-    transform:translateY(0);
+  100% {
+    transform: translateY(0);
   }
- }
+}
 
- .home-content h3
- {
-   font-size: 4.2rem;
-   font-weight: 700;
- }
- .home-content h3:nth-of-type(2)
- {
+.home-content h3 {
+  font-size: 4.2rem;
+  font-weight: 700;
+}
+.home-content h3:nth-of-type(2) {
   margin-bottom: 2rem;
 }
 span {
@@ -408,7 +390,7 @@ span {
 
 .about {
   position: relative;
-  height: 100vh; 
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -434,19 +416,19 @@ span {
   object-fit: cover;
 }
 
-.video-overlay{
+.video-overlay {
   position: absolute;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  background-color: rgba(0,0,0,0,0.5);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0, 0.5);
   z-index: 1;
 }
 
-.background-video{
+.background-video {
   filter: contrast(1.5) brightness(1.4);
-  z-index:0;
+  z-index: 0;
 }
 
 .overlay {
@@ -479,7 +461,7 @@ span {
 }
 
 .about-content .heading span {
-  font-size: 7rem; 
+  font-size: 7rem;
 }
 
 .heading {
@@ -506,7 +488,7 @@ span {
 
 @media (max-width: 1024px) {
   .about-content {
-    flex-direction: column; 
+    flex-direction: column;
   }
 
   .about-content .heading {
@@ -514,7 +496,7 @@ span {
   }
 
   .about-content .heading span {
-    font-size: 4rem; 
+    font-size: 4rem;
   }
 
   .about-content p {
@@ -528,7 +510,7 @@ span {
   }
 
   .about-content .heading span {
-    font-size: 4rem; 
+    font-size: 4rem;
   }
 
   .about-content p {
@@ -542,7 +524,7 @@ span {
   }
 
   .about-content .heading span {
-    font-size: 2rem; 
+    font-size: 2rem;
   }
 
   .about-content p {
@@ -553,8 +535,6 @@ span {
     padding: 10px;
   }
 }
-
-
 
 .services-container {
   display: flex;
@@ -636,15 +616,19 @@ span {
   position: relative;
   width: 290px;
   background: linear-gradient(90deg, rgb(31, 102, 31), rgb(231, 231, 121));
-  background: -webkit-linear-gradient(90deg, rgb(31, 102, 31), rgb(231, 231, 121));
+  background: -webkit-linear-gradient(
+    90deg,
+    rgb(31, 102, 31),
+    rgb(231, 231, 121)
+  );
   border-radius: 10px;
   margin: 10px;
   align-self: stretch;
   flex: 1 1 21%;
-  opacity: 1; 
+  opacity: 1;
   cursor: pointer;
-  transform: translateY(0px); 
-  transition: transform 0.3s ease, box-shadow 0.3s ease, opacity 0.3s ease; 
+  transform: translateY(0px);
+  transition: transform 0.3s ease, box-shadow 0.3s ease, opacity 0.3s ease;
 }
 
 .fcard-content {
@@ -653,7 +637,7 @@ span {
 }
 
 .fcard:hover {
-  box-shadow: 2px 2px 10px rgba(185, 185, 106, 0.8); 
+  box-shadow: 2px 2px 10px rgba(185, 185, 106, 0.8);
   transform: scale(1.1);
   -webkit-transform: scale(1.1);
   -ms-transform: scale(1.1);
@@ -735,7 +719,7 @@ a {
   color: rgb(230, 226, 226);
 }
 
-.pos{
+.pos {
   position: relative;
 }
 
@@ -752,7 +736,10 @@ a {
   /* grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); */
   align-items: center;
   gap: 2.5rem;
+  justify-items: center;
 }
+
+
 
 .portfolio-container .portfolio-box {
   position: relative;
@@ -760,20 +747,24 @@ a {
   box-shadow: 0 0 1rem var(--bg-color);
   overflow: hidden;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  transition: transform 0.3s ease-in-out;
+}
+.portfolio-box img {
+  width: 407px;
+  height: 300px;
+  transition: 0.5s ease;
 }
 
-.portfolio-box img,.portfolio-box iframe {
-  /* width: 407px;
+
+/* .portfolio-box img, .portfolio-box iframe {
+  width: 407px;
   height: 300px;
-  transition: 0.5s ease; */
-  width: 100%;
-  height: auto;
+  transition: 0.5s ease; 
+   width: 407px;
+  height: 300px;
+  object-fit: cover;
   transition: transform 0.5s ease;
-}
+  border-radius: 2rem;
+} */
 
 .portfolio-box:hover img {
   transform: scale(1.1);
@@ -791,7 +782,7 @@ a {
   align-items: center;
   flex-direction: column;
   text-align: center;
-  padding: 1rem;
+  padding: 0.4rem;
   transform: translateY(100%);
   /* transition: 0.5s ease; */
   transition: transform 0.5s ease;
@@ -799,17 +790,18 @@ a {
   color: var(--txt-color);
   /* text-shadow : 1px 1px 2px black !important; */
   text-shadow: var(--second-color) 1px 0 10px;
+  /* border-radius: 2rem; */
 }
 
 .portfolio-box:hover .portfolio-layer {
   transform: translateY(0);
 }
 .portfolio-box h4 {
-  /* font-size: 3rem; */
-  font-size: 1.5rem;
+  font-size: 3rem;
+
+  /* font-size: 1.5rem; */
   margin: 1rem 0;
   color: #fff;
-
 }
 .portfolio-heading {
   position: absolute;
@@ -826,11 +818,10 @@ a {
 
 .portfolio-layer p {
   font-size: 1rem;
-  margin: 0.5rem 0;
+  margin: 0.3rem 0 1rem;
 }
 
 .portfolio-layer a {
-  position: inline-flex;
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -838,16 +829,22 @@ a {
   height: 3rem;
   background: var(--txt-color);
   border-radius: 50%;
-  transition: background 0.3s;
+  /* transition: background 0.3s; */
 }
 
 .portfolio-layer a i {
-  font-size: 1.5rem;
+  font-size: 2rem;
   color: var(--second-color);
 }
 @media (max-width: 768px) {
-  .portfolio-container {
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  .portfolio-box {
+    flex: 1 1 45%; /* Adjust for smaller screens */
+    /* grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); */
+  }
+}
+@media (max-width: 480px) {
+  .portfolio-box {
+    flex: 1 1 100%; /* Full width for very small screens */
   }
 }
 
@@ -901,11 +898,11 @@ input[type="number"]::-webkit-inner-spin-button {
   cursor: pointer;
 }
 
-#review-btn{
+#review-btn {
   padding: 10px 20px;
   border: none;
   border-radius: 5px 0 0 5px;
-  background-color:  #B19222;
+  background-color: #b19222;
   color: white;
   font-size: 16px;
   writing-mode: vertical-rl;
@@ -916,12 +913,9 @@ input[type="number"]::-webkit-inner-spin-button {
   top: 50%; /* Vertically center */
   transform: translateY(-50%); /* Adjust for centering */
   white-space: nowrap; /* Prevent text from wrapping */
-  
-  
-
 }
-#review-btn:hover{
-  background-color:#B19222 ;
+#review-btn:hover {
+  background-color: #b19222;
 }
 .button-container {
   position: fixed;
@@ -933,7 +927,6 @@ input[type="number"]::-webkit-inner-spin-button {
 
 /* Modal styles */
 .modal {
-  
   display: none;
   flex-direction: column;
   /* flex-wrap: nowrap; */
@@ -957,7 +950,7 @@ input[type="number"]::-webkit-inner-spin-button {
   max-width: 500px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
   position: relative;
-    text-align: center;
+  text-align: center;
 }
 .close {
   color: #aaa;
@@ -974,7 +967,7 @@ input[type="number"]::-webkit-inner-spin-button {
   margin-top: 0;
   margin-bottom: 10px;
   text-align: center;
-  color:black;
+  color: black;
   font-size: 24px;
 }
 /* .modal-content label {
@@ -1003,15 +996,15 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 .form-group input,
 .form-group textarea {
-    width: 100%;
-    padding: 10px 10px 10px 40px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 14px;
+  width: 100%;
+  padding: 10px 10px 10px 40px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
 }
 .form-group input::placeholder,
 .form-group textarea::placeholder {
-    color: #bbb;
+  color: #bbb;
 }
 .form-group textarea {
   height: 80px;
@@ -1021,20 +1014,19 @@ input[type="number"]::-webkit-inner-spin-button {
 .modal-content button[type="submit"] {
   background: linear-gradient(to right, #8a2be2, #f163ed);
   background: linear-gradient(to right, rgb(75, 179, 75), rgb(42, 228, 42));
-    color: white;
-    border: none;
-    border-radius: 5px;
-    padding: 10px;
-    font-size: 16px;
-    cursor: pointer;
-    width: 100%;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 16px;
+  cursor: pointer;
+  width: 100%;
 }
 
 .modal-content button[type="submit"]:hover {
   background: linear-gradient(to right, #f55ef0, #8a2be2);
   background: linear-gradient(to right, rgb(63, 220, 63), rgb(20, 124, 20));
 }
-
 
 .modal-content button[type="submit"]:focus {
   outline: none;
@@ -1067,7 +1059,7 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 .rating__star:hover,
 .rating__star.active {
-    color: #ffc107;
+  color: #ffc107;
 }
 .footer {
   display: flex;
@@ -1093,12 +1085,12 @@ input[type="number"]::-webkit-inner-spin-button {
   margin-top: 15px;
 }
 
-.footer-title{
+.footer-title {
   font-weight: 500;
   font-size: 20px;
 }
 
-.footer-left{
+.footer-left {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -1151,12 +1143,9 @@ input[type="number"]::-webkit-inner-spin-button {
   }
 }
 
-
-
-
 @media (max-width: 1216px) {
   .about-content {
-    flex-direction: column; 
+    flex-direction: column;
   }
   .logo {
     font-size: 2.6vmax;
@@ -1217,45 +1206,38 @@ input[type="number"]::-webkit-inner-spin-button {
   } */
   .about {
     font-size: 2rem;
-    margin: 3rem 0 ;
+    margin: 3rem 0;
+  }
+  .home {
+    height: 20vmax;
+    overflow: hidden;
+    background: url(./images/hom2.jpg) center;
+    position: relative;
+    padding: 0;
+  }
+  .slide_viewer {
+    display: none;
+  }
+  .home-content {
+    /* position: fixed;  */
+    top: 30%;
+    left: 18%;
+    filter: blur(0.5px);
+    color: rgb(255, 247, 232);
+    width: 70%;
+    height: fit-content;
+    padding: 4vmax 11vmax 4vmax 2vmax;
+    overflow: hidden;
+  }
+  .home-content h1 {
+    font-size: 5rem;
+  }
+  .home-content h3 {
+    font-size: 3rem;
+    font-weight: 700;
+  }
 
-    
-  } 
-.home{  
-  height: 20vmax;
-  overflow: hidden;
-  background: url(./images/hom2.jpg) center;
-  position: relative;
-  padding: 0;
-}  
- .slide_viewer {
-  display: none; 
- } 
- .home-content{ 
-  /* position: fixed;  */
-  top: 30%;
-  left: 18.0%;
-  filter: blur(0.5px); 
-  color:rgb(255, 247, 232); 
-  width: 70%;
-  height: fit-content;
-  padding: 4vmax 11vmax 4vmax 2vmax;
-  overflow: hidden;
- 
-}
-.home-content h1
- {
-   font-size: 5rem; 
- }
- .home-content h3
- {
-   font-size: 3rem;
-   font-weight: 700;
- }
-
-  .about
-  {
-
+  .about {
     flex-direction: column-reverse;
   }
   .about img {
@@ -1277,8 +1259,6 @@ input[type="number"]::-webkit-inner-spin-button {
   }
 }
 
-
-
 @media (max-width: 617px) {
   /* .home-img img {
     width: 60vw;
@@ -1287,47 +1267,36 @@ input[type="number"]::-webkit-inner-spin-button {
     margin-left: 4vmax;
     height: fit-content;
   } */
-  .about-content p{
+  .about-content p {
     text-align: center;
   }
   .portfolio-container {
     grid-template-columns: 1fr;
     justify-items: center;
   }
-  
+
   .footerUpperPart {
     flex-direction: column-reverse;
-
   }
-   
 
-
- .home-content{ 
-  /* position: fixed;  */
-  /* margin-left: -140px;
+  .home-content {
+    /* position: fixed;  */
+    /* margin-left: -140px;
   margin-top: 15px;   */
-  filter: blur(0.5px); 
-  color:rgb(255, 247, 232); 
-}
-.home-content h1
- {
-   font-size: 3.5rem; 
- }
- .home-content h3
- {
-   font-size: 2.2rem;
-   font-weight: 700;
-}
-.slide_viewer {
+    filter: blur(0.5px);
+    color: rgb(255, 247, 232);
+  }
+  .home-content h1 {
+    font-size: 3.5rem;
+  }
+  .home-content h3 {
+    font-size: 2.2rem;
+    font-weight: 700;
+  }
+  .slide_viewer {
     display: block; /* Ensure the slide viewer is visible on smaller screens */
   }
 }
-
-
-
-
-
-
 
 @media (max-width: 365px) {
   .home-img {
@@ -1337,30 +1306,25 @@ input[type="number"]::-webkit-inner-spin-button {
     width: 90vw;
   }
 
- 
-  .home-content{ 
+  .home-content {
     /* position: fixed;  */
     /* margin-left: -190px;
     margin-top: 0px;   */
-    filter: blur(0.5px); 
-    color:rgb(255, 247, 232); 
+    filter: blur(0.5px);
+    color: rgb(255, 247, 232);
   }
-  .home-content h1
-   {
-     font-size: 2.5rem; 
-   }
-   .home-content h3
-   {
-     font-size: 1.8rem;
-     font-weight: 700;
-   }
+  .home-content h1 {
+    font-size: 2.5rem;
+  }
+  .home-content h3 {
+    font-size: 1.8rem;
+    font-weight: 700;
+  }
 
-  .footer
-  { 
-
+  .footer {
     flex-direction: column;
 
-    p{
+    p {
       font-weight: bold;
     }
   }
@@ -1393,9 +1357,7 @@ input[type="number"]::-webkit-inner-spin-button {
   /* margin-left:25px;
  margin-right:25px; */
 
- font-size:22px; 
- 
-
+  font-size: 22px;
 }
 .socialIcons a {
   display: grid;
@@ -1420,7 +1382,6 @@ input[type="number"]::-webkit-inner-spin-button {
 .services-box a:hover {
   text-decoration: underline; /* Add underline on hover if needed */
 }
-
 
 /* width */
 ::-webkit-scrollbar {
@@ -1447,17 +1408,15 @@ input[type="number"]::-webkit-inner-spin-button {
   background: rgb(192, 223, 100);
 }
 
-
 .footer {
   padding: 20px;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url('./images/istockphoto-1465642013-170667a.webp');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)),
+    url("./images/istockphoto-1465642013-170667a.webp");
   background-size: cover; /* Ensure the background image covers the entire container */
   background-position: center; /* Center the background image */
   background-repeat: no-repeat; /* Prevent the background image from repeating */
   color: #fff;
 }
-
-
 
 .footer-grid {
   display: grid;
@@ -1471,42 +1430,40 @@ input[type="number"]::-webkit-inner-spin-button {
 .footer-icons,
 .footer-iconTop {
   text-align: center;
- 
 }
-#backtoTop{
-  position :fixed;
+#backtoTop {
+  position: fixed;
   bottom: 90px;
   right: 24px;
   height: 60px;
   width: 60px;
-  background-color: #B19222;
-  border-radius:50%;
+  background-color: #b19222;
+  border-radius: 50%;
   margin-bottom: 10px;
   justify-content: center;
   align-items: center;
   z-index: 1000;
-  display: none; 
+  display: none;
   transition: background-color 0.5s ease-in 0.3s;
 }
-#backtoTop a{
+#backtoTop a {
   display: inline-block;
-height: 100%;
-width: 100%;
- border-radius: 50%;
- justify-content: center;
- align-items: center;
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
   transition: 0.5s ease;
   padding: 1.2rem;
-
 }
-#backtoTop a:hover{
-background-color: #a48613;
+#backtoTop a:hover {
+  background-color: #a48613;
 }
 #backtoTop a i {
-font-size: 36px;
+  font-size: 36px;
   color: white;
 }
-.footer-iconTop a{
+.footer-iconTop a {
   display: inline-block;
   width: max-content;
   padding: 0.8rem;
@@ -1517,7 +1474,6 @@ font-size: 36px;
 .footer-iconTop a:hover {
   box-shadow: 0 0 1rem var(--main-color);
 }
-
 
 .footer-iconTop a i {
   font-size: 2.4rem;
@@ -1537,12 +1493,12 @@ font-size: 36px;
 }
 
 .quick-links {
- text-align: center;
- width: 50vw;
- padding: 20px;
- p{
-  font-weight: bold;
-}
+  text-align: center;
+  width: 50vw;
+  padding: 20px;
+  p {
+    font-weight: bold;
+  }
 }
 
 .quick-links h2 {
@@ -1578,17 +1534,27 @@ font-size: 36px;
   .footer-grid {
     grid-template-columns: 1fr; /* Single column layout for smaller screens */
   }
-  * Places these items above the icons in the single column layout */
-  
-  .socialIcons{
-    gap:0;
+  *
+    Places
+    these
+    items
+    above
+    the
+    icons
+    in
+    the
+    single
+    column
+    layout
+    */
+    .socialIcons {
+    gap: 0;
     padding: 1rem;
   }
   .quick-links li {
     margin-bottom: 0;
   }
-  .quick-links ul{
+  .quick-links ul {
     flex-direction: column;
   }
 }
-
